haproxy/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress
  namespace: haproxy-controller
  labels:
    run: haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      serviceAccountName: haproxy-ingress-service-account
      containers:
        - name: haproxy-ingress
          image: haproxytech/kubernetes-ingress
          args:
            - --default-ssl-certificate=default/my-tls
            - --configmap=default/haproxy-configmap
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
