haproxy/haproxy-ingress_v1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
  annotations:
    haproxy.org/ingress.class: "haproxy"
    haproxy.org/load-balance: "roundrobin
    haproxy.org/ssl-redirect: "true"
    haproxy.org/ssl-redirect-code: "301"
spec:
  rules:
  - host: nginx.k8s.infradigital.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: sql.k8s.infradigital.com
    http:
      paths:
      - backend:
          serviceName: postgres
          servicePort: 5432
